# meilisearch2pushover

./: Cargo.toml  README.md
src/: main.rs
