[package]
name = "meilisearch2pushover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
iso8601 = { version = "0.6.1", features = ["serde"] }
pushover-rs = "0.3.15"
serde = { version = "1.0.197", features = ["derive"] }
time = { version = "0.3.7", features = ["serde-well-known", "formatting", "parsing"] }
tokio = { version = "1.36.0", features = ["macros"] }
