[package]
name = "meilisearch2pushover"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
flate2 = "1.1.2"
iso8601 = "0.6.3"
pushover-rs = "0.3.21"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["macros"] }
jiff = "0.2.15"
