[package]
name = "meilisearch2pushover"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
flate2 = "1.1.2"
iso8601 = "0.6.3"
jiff = { version = "0.2.15", features = ["serde"] }
pushover-rs = { version = "0.3.21", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["macros"] }
